5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1747_1533.log
== TEST (2019-05-15 14:04:43) 
-- CODE:
x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
c = 0
e = 2
f = 2
soma = 1

while (c <= k -1):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    h = (x**e)/factorial(f)
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:04:55) 
-- CODE:
x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
c = 0
e = 2
f = 2
soma = 1

while (c <= k -1):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    h = (x**e)/factorial(f)
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:05:11) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
c = 0
e = 2
f = 2
soma = 1

while (c <= k -1):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:05:21) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
c = 0
e = 2
f = 2
soma = 1

while (c <= k -1):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- EXECUTION TIME:
0.127134
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:05:40) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
c = 0
e = 2
f = 2
soma = 1

while (c <= k -1):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:06:08) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
c = 1
e = 2
f = 2
soma = 1

while (c <= k):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:06:13) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
c = 1
e = 2
f = 2
soma = 1

while (c <= k):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- EXECUTION TIME:
0.13058
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:06:51) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
c = 1
e = 2
f = 2
soma = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:06:56) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
c = 1
e = 2
f = 2
soma = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- EXECUTION TIME:
0.148385
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:07:06) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
c = 1
e = 2
f = 2
soma = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:08:51) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
f = 2
c = 0

while (c <= k - 1) and (k > 0):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:09:05) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
f = 2
c = 0

while (c <= k - 1) and (k > 0):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:09:12) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
f = 2
c = 0

while (c <= k - 1) and (k > 0):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:09:16) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
f = 2
c = 0

while (c <= k - 1) and (k > 0):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- EXECUTION TIME:
0.160567
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:09:20) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
f = 2
c = 0

while (c <= k - 1) and (k > 0):
	h = (x**e)/factorial(f)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:21:26) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2
	f = f + 2
	
print(round(soma, 8))	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    f = f + 2
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:21:39) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:21:40) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2
	
print(round(soma, 8))	
	

-- EXECUTION TIME:
0.117472
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:21:43) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:21:49) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2
	
print(round(soma, 8))	
	

-- EXECUTION TIME:
0.155539
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:10) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:11) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:23:32) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k < 0):
	print("Entrada invalida")
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	
print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:24:01) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k < 0):
	print("Entrada invalida")
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:24:09) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k < 0):
	print("Entrada invalida")
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:24:14) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k < 0):
	print("Entrada invalida")
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- EXECUTION TIME:
0.149775
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:11) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:26:16) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- EXECUTION TIME:
0.264548
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:27:50) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- EXECUTION TIME:
0.147405
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:52) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:28:00) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- EXECUTION TIME:
0.167922
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:05) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:45) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:51) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:10) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 1):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:16) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 1):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:29:25) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 1):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- EXECUTION TIME:
0.13023
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:29) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 1):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:39) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 1):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:47) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 1):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:30:10) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:30:15) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:30:35) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:30:59) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k) and (k > 0):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:08) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k):
	if (k > 1):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2
	else: 
		k == 1
		print(soma)

print(round(soma, 8))	
	

-- ERROR:
File "XXXX", line 14
    h = (x**e)/factorial(e)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:21) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

while (c <= k):
	if (k > 1):
	h = (x**e)/factorial(e)
	soma = soma + h
	c = c + 1
	e = e + 2
	else: 
		k == 1
		print(soma)

print(round(soma, 8))	
	

-- ERROR:
File "XXXX", line 14
    h = (x**e)/factorial(e)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:27) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2

print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:40) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
		print(round(soma, 8))	
	

-- OUTPUT:
3.0
3.66666667
3.75555556
3.76190476
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:33:43) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
		print(round(soma, 8))	
	

-- EXECUTION TIME:
0.18278
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.0
3.66666667
3.75555556
3.76190476
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
51.0
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
73.0
937.0
5084.2
15748.42857143
32811.19428571
51425.12051948
66152.62259455
74989.12383959
79147.47736667
80723.27449272
81214.4320385
81342.56009392
81370.9453862
81376.35210854
81377.2470143
81377.37691998
81377.39359237
81377.39549778
81377.39569293
81377.39571094
81377.39571245
81377.39571257
81377.39571257
81377.39571257
81377.39571257
81377.39571257
81377.39571257
81377.39571257
81377.39571257
81377.39571257
81377.39571257
81377.39571257
81377.39571257
81377.39571257
81377.39571257
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:50) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
		print(round(soma, 8))	
	

-- OUTPUT:
3.0
3.66666667
3.75555556
3.76190476
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:51) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
		print(round(soma, 8))	
	

-- OUTPUT:
3.0
3.66666667
3.75555556
3.76190476
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:51) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
		print(round(soma, 8))	
	

-- OUTPUT:
3.0
3.66666667
3.75555556
3.76190476
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:51) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
		print(round(soma, 8))	
	

-- OUTPUT:
3.0
3.66666667
3.75555556
3.76190476
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:56) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
		print(round(soma, 8))	
	

-- OUTPUT:
3.0
3.66666667
3.75555556
3.76190476
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:05) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:08) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:34:12) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- EXECUTION TIME:
0.183334
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76218695
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
467.66666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:30) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:30) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:34) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 1

if (k == 1):
	print(soma)
else:	
	while (c <= k):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:35:44) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 0

if (k == 1):
	print(soma)
else:	
	while (c <= k - 1):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:35:47) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 0

if (k == 1):
	print(soma)
else:	
	while (c <= k - 1):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76218695
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:36:30) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 0

if (k == 1):
	print(soma)
else:	
	while (c <= k - 2):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76190476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:36:34) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 0

if (k == 1):
	print(soma)
else:	
	while (c <= k - 2):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76190476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:36:40) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 0

if (k == 1):
	print(soma)
else:	
	while (c <= k - 2):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- OUTPUT:
3.76190476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:36:44) 
-- CODE:
from math import *

x = float(input("Valor de x: "))
k = int(input("Quantidade de termos: "))
#Valor constante
soma = 1

#Valores que variam
e = 2
c = 0

if (k == 1):
	print(soma)
else:	
	while (c <= k - 2):
		h = (x**e)/factorial(e)
		soma = soma + h
		c = c + 1
		e = e + 2
	print(round(soma, 8))	
	

-- EXECUTION TIME:
0.156053
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.76190476
---- user output:
3.76190476
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
51.0
---- user output:
51.0
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
